# romulus6

./: .env.example  .gitignore  Makefile  romulus6.code-workspace
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: database.py  k8s.py  main.py
backend/app/models/: SCHEMA_SYNC.md  __init__.py  agent.py  base.py  event.py  graph.py  json_column.py  lease.py  pydantic_agent.py  reconcile.py  run.py  sandbox.py  structured_fields.py  supported_models.py  template.py  worker.py  workspace.py
backend/app/routers/: SCHEMA_SYNC.md  agents.py  events.py  graphs.py  sandboxes.py  templates.py  workers.py  workspaces.py
backend/app/services/: SCHEMA_SYNC.md  agent_recovery.py  agents.py  controller.py  event_broadcast.py  events.py  graph_transfer.py  graphs.py  node_configs.py  node_references.py  node_shapes.py  runs.py  sandboxes.py  structured_serialization.py  templates.py  worker_client.py  workers.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_data_model_guards.py  test_event_streaming.py  test_run_execution.py  test_structured_field_contracts.py
worker/: Dockerfile  pyproject.toml
worker/app/: backend_client.py  config.py  graph_tools.py  graph_tools_mcp.py  main.py  models.py  output_schema.py  pydantic_schema_registry.py  recovery.py  run_tools.py  run_tools_mcp_server.py  session_manager.py  supported_models.py
worker/k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
worker/tests/: test_commands.py
worker/tools/: romulus__graph_create.ts  romulus__graph_delete.ts  romulus__graph_describe.ts  romulus__graph_edit.ts  romulus__graph_get.ts
(+125 files in other folders)
