[project]
name = "worker"
version = "0.1.0"
description = "Romulus worker service — coding agent pod"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-ai>=1.70.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28.0",
    "openai-agents @ git+ssh://git@github.com/OpenAI-Early-Access/openai-agents-python-preview.git",
    "claude-code-sdk>=0.0.25",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
